Overflow footer not fixed and header image/signature not complete

--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,6 @@ figure.snip0019:hover figcaption::before {
 .row1{
   background-color: #5b6467;
   background-image: linear-gradient(-45deg, #5b6467,  #D3D3D3, #C0C0C0, #686868);
-  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -506,8 +505,8 @@ figure.snip0019:hover figcaption::before {
 
 .row3{
   background: #ffffff;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-display: flex;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  display: flex;
   justify-content: center;
   align-items: center;
   margin: 0;
@@ -519,62 +518,83 @@ display: flex;
   width: 8rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
+
 .row3 line1{
   font-family:MontserratRegular,Helvetica,sans-serif;
   color:#000000;
-  font-size:7rem;
-  font-weight:1000;
-  letter-spacing:.7px;
-  line-height:1.1;
-  text-align: center;  
+  font-size: 10rem;
+  text-align: center; 
+  padding-bottom: 25px; 
+  transform: scale(.1, 1);
 }
 
 .row3 h2{
-  font-family:MontserratRegular,Helvetica,sans-serif;
+  font-family: sans-serif;
   color:#000000;
   font-size:1.5rem;
-  font-weight:2000;
+  font-weight:bold;
   letter-spacing:.7px;
-  line-height:1.1;
-  text-align: left;  
+  text-align: left;
+  padding-bottom: 3px;  
 }
 .row3 h3{
-  font-family:MontserratRegular,Helvetica,sans-serif;
+  font-family: sans-serif;
   color:#000000;
   font-size:1.0rem;
-  font-weight:2000;
+  font-weight:normal;
   letter-spacing:.7px;
-  line-height:1.1;
-  text-align: left;  
+  line-height: 1px;
+  text-align: left; 
+  padding-bottom: 2px; 
+  text-overflow: ellipsis;
+
 }
-.row3 h4{
-  font-family:MontserratRegular,Helvetica,sans-serif;
-    font-style: italic;
+
+
+.row3 a{
+  font-family: sans-serif;
+  font-style: italic;
   color:#000000;
   font-size:1.0rem;
-  font-weight:2000;
+  font-weight:normal;
   letter-spacing:.7px;
-  line-height:1.1;
+  line-height: 1px;
   text-align: left;  
+  padding-bottom: 2px; 
 }
 
 .row3 signature{
   background: #ffffff;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 50px;
+  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+  border-radius: 25px;
   width: 80%;
-  height: 75%;
+  height: 80%;
   top: 50%;
   left: 50%;
-  /* bring your own prefixes */
-  /transform: translate(-50%, -50%);
   text-align: left;
+    display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 
-.row3 viewBox{
-   width: 5%;
-  height: 5%; 
+.row3 box{
+
 }
+
+.row3 box img{
+  width: 15rem;
+  border-radius: 0px;
+  box-shadow: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+
